# ecdna-evo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  abc.md  culturef28g20.sh  design.drawio  dynamics.md  longitudinal.sh  memory.md  paper.mplstyle  requirements.txt  setup.cfg
.github/workflows/: build.yml  ci.yml  clippy-fmt.yml  pypackage.yml  release.yml  test.yml
bins/: conference.sh  subsample.sh  whole.sh  whole_g1.sh
ecdna/: Cargo.toml  README.md
ecdna-data/: Cargo.toml  README.md
ecdna-data/src/: data.rs  lib.rs  patient.rs
ecdna-dynamics/: Cargo.toml  README.md
ecdna-dynamics/benches/: segregation.rs
ecdna-dynamics/src/: dynamics.rs  lib.rs  run.rs  segregation.rs
ecdna-evo/: Cargo.toml  README.md
ecdna-evo/src/: abc.rs  data.rs  dynamics.rs  gillespie.rs  lib.rs  patient.rs  run.rs  simulation.rs  timepoints.rs
ecdna-plot/: abc.py  commons.py  dynamics.py  inference.py  paper.mplstyle  preprocess.py  summarize.py
ecdna-preprocess/: Cargo.toml  README.md
ecdna-preprocess/src/: app.rs  main.rs
ecdna-sim/: Cargo.toml  README.md
ecdna-sim/benches/: rate.rs
ecdna-sim/src/: event.rs  lib.rs  process.rs  rate.rs
ecdna/src/: abc.rs  app.rs  app_backup.rs  clap_app.rs  main.rs
ecdnaevo/: README.md  abc.py  app.py  commons.py  dynamics.py  load.py  plots.py
preprocess/: Cargo.toml
preprocess/src/: app.rs  clap_app.rs  main.rs
results/: README.md
src/: app.rs  clap_app.rs  dynamics.rs  lib.rs  main.rs  process.rs  proliferation.rs  run.rs  segregation.rs
src/abc/: abc.rs  app.rs  patient.rs
src/dynamics/: app.rs
