[package]
name = "ecdna-evo"
version = "0.13.5"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.1"
indicatif = { version = "*", features = ["rayon"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
ssa = { git = "https://github.com/fraterenz/ssa", tag = "v0.6.0" }
ecdna-lib = { git = "https://github.com/fraterenz/ecdna-lib", tag = "v0.5.4"}
rand = { version = "0.8.0", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.0"
rayon = "1.6"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
