[package]
name = "ecdna-evo"
version = "0.25.0"
edition = "2021"
repository = "https://github.com/fraterenz/ecdna-evo"
description = "Evolutionary models of extra-chromosomal DNA (ecDNA)"
license = "Apache-2.0 OR MIT"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.1"
ecdna-lib = "3.0.2"
indicatif = { version = "*", features = ["rayon"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
sosa = "3.0.3"
rand = { version = "0.8.0", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.0"
rayon = "1.6"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
