[package]
name = "ecdna-data"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
enum_dispatch = "0.3.7"
ecdna-sim = { path = "../ecdna-sim" }
rand = { version = "0.8.0", features = ["small_rng"] }
rand_distr = "0.4.0"
rand_pcg = "0.3.1"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
derive_builder = "0.11.1"

[dev-dependencies]
test-case = "2.0.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.4.3"
