[package]
name = "ecdna-data"
version = "0.4.4"
edition = "2021"

[dependencies]
anyhow.workspace = true
enum_dispatch.workspace = true
ecdna-sim = { path = "../ecdna-sim" }
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
serde.workspace = true
serde_json = "1.0.79"
derive_builder = "0.11.1"

[dev-dependencies]
fake.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
test-case.workspace = true
