[package]
name = "ecdna-dynamics"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdna-sim = { path = "../ecdna-sim" }
ecdna-data = { path = "../ecdna-data" }
anyhow = "1.0"
enum_dispatch = "0.3.7"
rand = { version = "0.8.0", features = ["small_rng"] }
rand_pcg = "0.3.1"
rand_distr = "0.4.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
