[package]
name = "ecdna-dynamics"
version = "0.4.4"
edition = "2021"

[dependencies]
ecdna-sim = { path = "../ecdna-sim" }
ecdna-data = { path = "../ecdna-data" }
anyhow.workspace = true
enum_dispatch.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
criterion = "0.3"

[[bench]]
name = "segregation"
harness = false
