[package]
name = "ecdna-evo"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Evolutionary models of extrachromosomal DNA (ecDNA)."
readme = "README.md"
keywords = ["bayesian-inference", "gillespie", "stochastic-simulation", "ecdna"]

[dependencies]
rand = { version = "0.8.0", features = ["small_rng"] }
rand_distr = "0.4.0"
anyhow = "1.0"
enum_dispatch = "0.3.7"
derive_builder = "0.10.2"
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1"
num-traits = "0.2"

[dev-dependencies]
fake = "2.4"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
test-case = "1.2.3"
