[package]
name = "ecdna-preprocess"
version = "0.2.0"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Handle the data for ecdna simulations"
readme = "README.md"

[dependencies]
clap= { version = "3.1.6", features = [  "cargo" ] }
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"]}
anyhow = "1.0"
ecdna-data = { path = "../ecdna-data" }
ecdna-sim = { path = "../ecdna-sim" }

[[bin]]
name="preprocess"
path = "src/main.rs"
