[package]
name = "ecdna-sim"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Evolutionary models of extrachromosomal DNA (ecDNA)."
readme = "README.md"
keywords = ["bayesian-inference", "gillespie", "stochastic-simulation", "ecdna"]

[dependencies]
rand = { version = "0.8.0", features = ["small_rng"] }
rand_distr = "0.4.0"
rand_pcg = "0.3.1"
anyhow = "1.0"
enum_dispatch = "0.3.7"
num-traits = "0.2"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
