[package]
name = "ecdna-sim"
version = "0.4.4"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Evolutionary models of extrachromosomal DNA (ecDNA)."
readme = "README.md"
keywords = ["bayesian-inference", "gillespie", "stochastic-simulation", "ecdna"]

[dependencies]
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
anyhow.workspace = true
enum_dispatch.workspace = true
num-traits = "0.2"
serde.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
