[package]
name = "ecdna"
version = "0.3.0"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Evolutionary Models of extrachromosomal DNAs"
readme = "README.md"

[dependencies]
ecdna-data = { path = "../ecdna-data" }
ecdna-dynamics = { path = "../ecdna-dynamics" }
ecdna-sim = { path = "../ecdna-sim" }
clap = { version = "3.0.4", features = ["cargo"] }
anyhow = "1.0"
indicatif = { version = "*", features = ["rayon"] }
chrono = "0.4"
rayon = "1.5"
enum_dispatch = "0.3.7"
flate2 = "1.0"
tar = "0.4"
rand = { version = "0.8.0", features = ["small_rng"] }
rand_pcg = "0.3.1"
rand_distr = "0.4.0"
csv = "1.1"
derive_builder = "0.11.1"
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
fake = "2.4"
quickcheck = "1"
quickcheck_macros = "1"
test-case = "1.2.3"
