[package]
name = "ecdna"
version = "0.4.4"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Evolutionary models of extra-chromosomal DNAs (ecDNAs)"
readme = "README.md"

[dependencies]
ecdna-data = { path = "../ecdna-data" }
ecdna-dynamics = { path = "../ecdna-dynamics" }
ecdna-sim = { path = "../ecdna-sim" }
clap = { version = "3.0.4", features = ["cargo"] }
anyhow.workspace = true
indicatif = { version = "*", features = ["rayon"] }
chrono = "0.4"
rayon = "1.5"
enum_dispatch.workspace = true
flate2 = "1.0"
tar = "0.4"
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
csv = "1.1"
derive_builder = "0.11.1"
serde_json = "1.0"
serde.workspace = true

[dev-dependencies]
fake.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
test-case.workspace = true
