[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Terenzi"]
description = "Create the input json file for the bayesian inferences: add a new sample to a patient json file."
readme = "README.md"

[dependencies]
ecdna-evo = { path = "../ecdna-evo" }
clap = { version = "3.1.6", features = ["cargo"] }
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0"
